--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "minimist": "^1.2.5",
+    "nomnoml": "^0.8.0",
     "pg": "^8.3.0"
   },
   "devDependencies": {},
