fixed missing bin command and flags not working

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postgerd",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Generate erd diagrams for postgres",
   "main": "index.js",
   "dependencies": {
@@ -13,6 +13,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
+  },
+  "bin": {
+    "postgerd": "node index.js"
   },
   "repository": {
     "type": "git",
